[package]
name = "sfu-stream-viewer-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sfu-stream-viewer-probe"
path = "src/main.rs"

[dependencies]
mello-sys = { path = "../../mello-sys" }
mello-core = { path = "../../mello-core" }
minifb = "0.27"
log = { workspace = true }
env_logger = "0.11"
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
