[package]
name = "stream-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "stream-viewer"
path = "src/main.rs"

[dependencies]
mello-sys = { path = "../../mello-sys" }
minifb = "0.27"
socket2 = "0.5"
log = { workspace = true }
env_logger = "0.11"
