[package]
name = "voice-test-client"
version = "0.0.0-DEV"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "voice-test-client"
path = "src/main.rs"

[dependencies]
mello-core = { path = "../../mello-core", features = ["test-faults"] }
tokio = { version = "1", features = ["full"] }
slint = { version = "1.17", features = ["renderer-winit-software", "renderer-winit-skia"] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
